Fix Memory advisor rules: correctness, false-positive, and new leak-detection checks
Implements a cross-checked audit (5 independent LLM reviewers, each citing
current OpenJDK/Oracle/kernel.org docs) of the framework-neutral Memory
advisor in bootui-engine. All fixes are engine-only (no Spring/Quarkus
adapter changes needed) since the ruleset is 100% JMX/java.lang.management.

Correctness fixes:
- MEM-GC-005 (G1FullGcFrequencyRule): removed the stale "single-threaded"
  claim about G1's fallback Full GC. JEP 307 (JDK 10) parallelized it; the
  rationale now centers on it still being a fully stop-the-world fallback
  path, not thread count. Detection logic (G1 Old Generation bean delta) is
  unchanged -- it was independently verified against HotSpot source as
  correct and non-over-firing.
- MEM-HEAP-003 (renamed UnsetOrSmallMaxHeapRule -> SmallMaxHeapUnderPressureRule):
  the in-code description/title still referenced an "unbounded heap" branch
  that evaluateRule() no longer implements. Code now matches what actually
  runs (max-heap-vs-container-limit ratio only); docs/MEMORY-CHECKS.md was
  already correct and is unchanged for this item.
- MEM-FOOTPRINT-002 (PlatformThreadStackReservationRule): HIGH escalation no
  longer triggers off the container-limit ratio alone. Thread stacks are a
  demand-paged virtual-memory reservation, not resident memory, so HIGH now
  additionally requires "confirmed resident risk" (current + reserved >=
  limit) using the already-available containerMemoryCurrentBytes(); the
  ratio breach alone downgrades to MEDIUM. (Note: a literal "swap limit for
  current" reading, as one phrasing of the audit suggested, was checked
  against a counter-example and found to move in the wrong direction, so the
  dual-condition design above was used instead -- see PR description.)
- MEM-GC-004 (SerialGcOnMultiCoreRule): now also skips when effective memory
  (container limit, else total physical memory) is below ~2 GiB, mirroring
  Oracle's historica